2007-07-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	Added scrollbars to metatags file prop dlg

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-lexer.ll:
	* src/utils.cc:
	* src/utils.h:
	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-file.cc:
	* src/tags/gnome-cmd-tags-file.h:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Added support for File metatags

2007-07-18  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	* src/tags/gnome-cmd-tags-exiv2.h:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h
	Replaced libexif and iptcdata with exiv2 and used GnomeCmdFileMetadata_New container
	for Exif and IPTC metatags

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Remove last libexif & iptcdata remnants

	* src/tags/gnome-cmd-tags.h:
	Remove trailing " \t\n\r\0" from a metatag

	* src/tags/gnome-cmd-tags-exiv2.cc:
	Interpret exiv2 tag values

	* configure.in:
	* po/POTFILES.in:
	* src/gnome-cmd-file.cc:
	* src/Makefile.am:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	* src/tags/Makefile.am:
	* src/gnome-cmd-file.h:
	Remove unused ICC code

	* src/gnome-cmd-file.h:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	* src/tags/gnome-cmd-tags.h:
	* src/tags/gnome-cmd-tags-taglib.cc:
	Rename GnomeCmdFileMetadata_New -> GnomeCmdFileMetadata

2007-07-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	* src/tags/gnome-cmd-tags-taglib.cc:
	* src/tags/gnome-cmd-tags.h:
	Add support for multiple metadata tags

2007-07-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.h:
	Add generic template function GnomeCmdFileMetadata_New::add(GnomeCmdTag, const T &)

2007-07-11  koos  <kjniesink@yahoo.co.uk>
